Fix product text overflow

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -390,6 +390,8 @@ main.container {
             }
 
             color: black;
+
+            margin: 0 -30px;
         }
 
         .product-pic {
